Adicionei outro paragrafo

--- a/site -exemplo/index.html
+++ b/site -exemplo/index.html
@@ -10,5 +10,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias iure labore molestiae expedita quod incidunt nemo nesciunt architecto blanditiis autem, veniam ab voluptatum ratione, dolor quibusdam nihil neque cum provident.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident fugit ducimus aliquam fuga nemo laudantium id sapiente illum vitae quia autem unde, repellat ea suscipit tenetur cum laboriosam vero placeat!</p>
 </body>
 </html>
